perl (5.10.0-19) UNRELEASED; urgency=low

  * Downgrade the perl-doc recommendation to a suggestion.
    (Closes: #496770, #442805)
  * Make File::Temp warn on cleaning up the current working directory at
    exit instead of bailing out. (Closes: #479317)
  * Fix $? when dumping core. (Closes: #509041)
  * Fix a memory leak with Scalar::Util::weaken(). (Closes: #506324)

 -- Niko Tyni <ntyni@debian.org>  Thu, 18 Dec 2008 20:33:29 +0200

perl (5.10.0-18) unstable; urgency=high

  * [SECURITY] CVE-2005-0448 revisited: File::Path::rmtree no longer
    allows creating of setuid files. (Closes: #286905)

 -- Niko Tyni <ntyni@debian.org>  Fri, 21 Nov 2008 00:49:57 +0200

perl (5.10.0-17) unstable; urgency=low

  * Fix 'Unknown error' messages with attribute.pm. (Closes: #488088)
  * Add conflicts/replaces/provides for podlators-perl. (Closes: #503123)
  * Raise the timeout of ext/threads/shared/t/stress.t to accommodate
    slower build hosts. (Closes: #501970)
  * Stop t/op/fork.t relying on rand(). (Closes: #317843)
  * Fix two regexp memory leaks. (Closes: #503975)

 -- Niko Tyni <ntyni@debian.org>  Sat, 01 Nov 2008 14:48:22 +0200

perl (5.10.0-16) unstable; urgency=low

  * Revert the perldoc "pod2man --utf8" change from 5.10.0-14.
    The --utf8 option may break for POD documents with a wrong or missing
    =encoding. (Reopens: #492037)
  * Make Pod::Man use the PerlIO UTF-8 output layer when --utf8 is
    enabled. (See #500210)
  * Revert an incorrect substitution optimization introduced in 5.10.0.
    (Closes: #501178)

 -- Niko Tyni <ntyni@debian.org>  Sun, 05 Oct 2008 16:00:41 +0300

perl (5.10.0-15) unstable; urgency=low

  * Fix Sys::Syslog slowness when logging with non-native mechanisms.
    (Closes: #498776)
  * Fix memory corruption with in-place sorting. (Closes: #498769)
  * Pod::Man no longer remaps the code point for non-breaking space.
    (Closes: #500210)

 -- Niko Tyni <ntyni@debian.org>  Mon, 29 Sep 2008 15:06:37 +0300
