@@ -6,6 +6,9 @@ perl (5.10.0-19) UNRELEASED; urgency=low
     exit instead of bailing out. (Closes: #479317)
   * Fix $? when dumping core. (Closes: #509041)
   * Fix a memory leak with Scalar::Util::weaken(). (Closes: #506324)
+  * [SECURITY] "second half of CVE-2007-4829": Archive::Tar no longer
+    follows symlinks when unpacking. Upstream fix backported by Ubuntu.
+    (Closes: #509802)
 
  -- Niko Tyni <ntyni@debian.org>  Thu, 18 Dec 2008 20:33:29 +0200
 
